contrib/http_dubbo_transcoder/filters/http/test/test_data/dubbo.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          http_protocol_options:
            accept_http_10: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/abc"
                route:
                  cluster: local_service
                  upgrade_configs: 
                  - upgrade_type: "CONNECT"
                    connect_config: 
                      allow_post: true
              - match:
                  prefix: "/mytest_1"
                route:
                  cluster: local_service
                  upgrade_configs: 
                  - upgrade_type: "CONNECT"
                    connect_config: 
                      allow_post: true
          http_filters:
          - name: envoy.filters.http.http_dubbo_transcoder
            typed_config: 
              "@type": type.googleapis.com/envoy.extensions.filters.http.http_dubbo_transcoder.v3.Transcoder
              disable: false
              auto_map: true
              url_unescape_spec: ALL_CHARACTERS_EXCEPT_RESERVED
              request_validation_options:
                reject_unknown_query_parameters: true
              services:
              - name: "common.sayHello"
                version: "0.0.0"
                methods:
                  get: "/abc/{path.name}"
                  name: "sayHello"
                  maps:
                  - name: "path.name"
                    mapTo: "params.0"
                    type: "java.lang.String"
              - name: "common.sayHello"
                version: "0.0.0"
                map_service_url: /mytest_*
                methods:
                  get: "{header.name}"
                  name: "sayHello"
                  body_template: ""
                  maps:
                  - name: "header.name"
                    mapTo: "params.0"
                    type: "java.lang.String"
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: local_service          
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    upstream_config:
      name: envoy.upstreams.http.tcp
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.tcp.v3.TcpConnectionPoolProto
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 11.164.30.21
                port_value: 20880
      # - lb_endpoints:
      #   - endpoint:
      #       address:
      #         socket_address:
      #           address: 139.162.123.134
      #           port_value: 20880
      # - lb_endpoints:
      #   - endpoint:
      #       address:
      #         socket_address:
      #           address: 114.55.31.224
      #           port_value: 20880
