contrib/http_dubbo_transcoder/filters/http/test/test_data/dubbo_pre_route copy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          http_protocol_options:
            accept_http_10: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/demoservice.DemoService"
                route:
                  cluster: local_service
                  upgrade_configs: 
                  - upgrade_type: "CONNECT"
                    connect_config: 
                      allow_post: true
              - match:
                  prefix: "/mytest.service"
                route:
                  cluster: local_service
                  upgrade_configs: 
                  - upgrade_type: "CONNECT"
                    connect_config: 
                      allow_post: true
                typed_per_filter_config:
                  envoy.filters.http.http_dubbo_transcoder:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.http_dubbo_transcoder.v3.HttpDubboTranscoder
                    auto_mapping: true
                    url_unescape_spec: ALL_CHARACTERS_EXCEPT_RESERVED
                    request_validation_options:
                      reject_unknown_query_parameters: true
                    services_mapping:
                    - name: "common.sayHello"
                      version: "0.0.0"
                      method_mapping:
                        name: "sayHello"
                        path_matcher:
                          match_pattern: "/mytest.service/sayHello"
                          match_http_method_spec: ALL_GET
                        parameter_mapping:
                        - extract_key_spec: ALL_HEADER
                          extract_key: key1
                          mapping_type: "java.lang.String"
          http_filters:
          - name: envoy.filters.http.http_dubbo_transcoder
            typed_config: 
              "@type": type.googleapis.com/envoy.extensions.filters.http.http_dubbo_transcoder.v3.HttpDubboTranscoder
              auto_mapping: true
              url_unescape_spec: ALL_CHARACTERS_EXCEPT_RESERVED
              request_validation_options:
                reject_unknown_query_parameters: true
              services_mapping:
              - name: "common.sayHello"
                version: "0.0.0"
                method_mapping:
                  name: "sayHello"
                  path_matcher:
                    match_pattern: "/mytest.service/sayHello"
                    match_http_method_spec: ALL_GET
                  parameter_mapping:
                  - extract_key_spec: ALL_QUERY_PARAMETER
                    extract_key: my_param
                    mapping_type: "java.lang.String"
              - name: "common.sayHello"
                version: "0.0.0"
                method_mapping:
                  name: "sayHello"
                  path_matcher:
                    match_pattern: "/mytest.service/sayHello"
                    match_http_method_spec: ALL_POST
                  parameter_mapping:
                  - extract_key_spec: ALL_QUERY_PARAMETER
                    extract_key: my_param
                    mapping_type: "java.lang.String"
              - name: "demoservice.DemoService"
                version: "0.0.0"
                method_mapping:
                  name: "sayHello"
                  parameter_mapping:
                  - extract_key_spec: ALL_HEADER
                    extract_key: my_param_1
                    mapping_type: "java.lang.String"
                  - extract_key_spec: ALL_HEADER
                    extract_key: my_param_2
                    mapping_type: "java.lang.String"
              - name: "demoservice.DemoService"
                version: "0.0.0"
                method_mapping:
                  name: "sayHello"
                  path_matcher:
                    match_pattern: "/demoservice.DemoService/sayHello/{my_param}"
                    match_http_method_spec: ALL_GET
                  parameter_mapping:
                  - extract_key_spec: ALL_PATH
                    extract_key: my_param
                    mapping_type: "java.lang.String"
              - name: "demoservice.DemoService"
                version: "0.0.0"
                method_mapping:
                  name: "sayHello"
                  path_matcher:
                    match_pattern: "/demoservice.DemoService/sayHello/{my_param}"
                    match_http_method_spec: ALL_GET
                  attachment_from_header_keys:
                  - header_key_1
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: local_service          
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    upstream_config:
      name: envoy.upstreams.http.tcp
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.tcp.v3.TcpConnectionPoolProto
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 11.164.30.21
                port_value: 20880
      # - lb_endpoints:
      #   - endpoint:
      #       address:
      #         socket_address:
      #           address: 139.162.123.134
      #           port_value: 20880
      # - lb_endpoints:
      #   - endpoint:
      #       address:
      #         socket_address:
      #           address: 114.55.31.224
      #           port_value: 20880
